<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileExplorer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_mkdir">Create Folder</string>
    <string name="action_selectall">SelectAll</string>
    <string name="action_copy">Copy</string>
    <string name="action_move">Move</string>
    <string name="action_paste">Paste</string>
    <string name="file_explorer">FileExplorer</string>
    <string name="sd_mounted">SD card already mounted!</string>
    <string name="sd_umounted">SD card hasnt been mounted!</string>
    <string name="action_unselectall">UnSelectAll</string>
    <string name="set_operation">Please select copy/move first!</string>
    <string name="action_delete">Delete</string>
    
    
    

</resources>
